# mayan-dig

./: .bumpversion.cfg  .cookiecutterrc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  old-setup.py  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/: codecov.yml  renovate.json5
.github/workflows/: github-actions.yml
ci/: bootstrap.py
ci/templates/: tox.ini
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/http/: auth.http  cabinets.http  documents.http  http-client.env.json
docs/reference/: index.rst  mayan_dig.rst
src/mayan_dig/: __init__.py  __main__.py  cli.py  constants.py  settings.py
src/mayan_ditch/: __main__.py  cli.py
tests/: test_mayan_dig.py  test_mayan_ditch.py
