[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "mayan_dig"
version = "0.1.0"
description = ""
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]

[tool.poetry.scripts]
mayan-dig = "mayan_dig.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = { version = "*", extras = ["all"] }
requests = "*"
pendulum = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-env = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
